[tool.poetry]
name = "housepricepredictor"
version = "0.1.0"
description = ""
authors = ["JuanGM07 <juanglezm3@gmail.com>"]
readme = "README.md"
packages = [{include = "housepricepredictor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10.5"
numpy = "^1.26.2"
streamlit = "^1.29.0"
scikit-learn = "1.2.2"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
